[gd_scene load_steps=18 format=2]

[ext_resource path="res://sprites/enemies/mob/Torreta-doble-electro.png" type="Texture" id=1]
[ext_resource path="res://scripts/enemies/mob/m_6.gd" type="Script" id=2]
[ext_resource path="res://scripts/enemies/mob/behavior/mob_0/in_range.gd" type="Script" id=3]
[ext_resource path="res://addons/godot-behavior-tree-plugin/behavior_tree.gd" type="Script" id=4]
[ext_resource path="res://addons/godot-behavior-tree-plugin/selector.gd" type="Script" id=5]
[ext_resource path="res://addons/godot-behavior-tree-plugin/sequence.gd" type="Script" id=6]
[ext_resource path="res://scripts/enemies/mob/behavior/wait.gd" type="Script" id=7]
[ext_resource path="res://scripts/enemies/mob/behavior/mob_0/attack.gd" type="Script" id=8]
[ext_resource path="res://scripts/enemies/mob/behavior/mob_0/hit.gd" type="Script" id=9]
[ext_resource path="res://scripts/enemies/mob/behavior/mob_0/takeDamage.gd" type="Script" id=10]
[ext_resource path="res://sprites/enemies/mob_perf_dmg.tres" type="Animation" id=11]
[ext_resource path="res://sprites/enemies/mobs_death.tres" type="Animation" id=12]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 54.5785, 82.205 )

[sub_resource type="Animation" id=5]
resource_name = "power_up"
length = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath(".:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 4 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath(".:vframes")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 1 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath(".:frame")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3 ]
}

[sub_resource type="CircleShape2D" id=2]
radius = 1549.69

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 50, 50 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 50, 50 )

[node name="mob_6" type="Node2D"]
position = Vector2( 4.75684, 6.10352e-05 )

[node name="body" type="RigidBody2D" parent="."]
position = Vector2( -1, 0 )
collision_layer = 4
collision_mask = 0
gravity_scale = 0.0
script = ExtResource( 2 )

[node name="hurtbox" type="CollisionShape2D" parent="body"]
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="body"]
position = Vector2( -7.96851, -8.89772 )
scale = Vector2( -0.36439, 0.360391 )
texture = ExtResource( 1 )
flip_h = true
hframes = 4

[node name="permanent" type="AnimationPlayer" parent="body/Sprite"]
anims/mob_perf_dmg = ExtResource( 11 )
anims/mobs_death = ExtResource( 12 )
anims/power_up = SubResource( 5 )

[node name="aggro_zone" type="Area2D" parent="body"]
collision_layer = 0
collision_mask = 2147483650

[node name="shape" type="CollisionShape2D" parent="body/aggro_zone"]
position = Vector2( 1.37842, 4.75677 )
shape = SubResource( 2 )

[node name="BehaviorTree" type="Node" parent="body"]
script = ExtResource( 4 )

[node name="BehaviorSelector" type="Node" parent="body/BehaviorTree"]
script = ExtResource( 5 )

[node name="BehaviorSequence2" type="Node" parent="body/BehaviorTree/BehaviorSelector"]
script = ExtResource( 6 )

[node name="is_hit" type="Node" parent="body/BehaviorTree/BehaviorSelector/BehaviorSequence2"]
script = ExtResource( 9 )

[node name="take_dmg" type="Node" parent="body/BehaviorTree/BehaviorSelector/BehaviorSequence2"]
script = ExtResource( 10 )

[node name="BehaviorSequence" type="Node" parent="body/BehaviorTree/BehaviorSelector"]
script = ExtResource( 6 )

[node name="in_range" type="Node" parent="body/BehaviorTree/BehaviorSelector/BehaviorSequence"]
script = ExtResource( 3 )

[node name="attack" type="Node" parent="body/BehaviorTree/BehaviorSelector/BehaviorSequence"]
script = ExtResource( 8 )

[node name="wander" type="Node" parent="body/BehaviorTree/BehaviorSelector"]
script = ExtResource( 7 )

[node name="FireTimer" type="Timer" parent="body"]

[node name="spawner_l" type="Area2D" parent="body"]

[node name="shape" type="CollisionShape2D" parent="body/spawner_l"]
position = Vector2( -108.065, -2.11893 )
shape = SubResource( 3 )

[node name="spawner_r" type="Area2D" parent="body"]

[node name="shape" type="CollisionShape2D" parent="body/spawner_r"]
position = Vector2( 108.065, 2.11893 )
shape = SubResource( 4 )

[connection signal="body_entered" from="body/aggro_zone" to="body" method="_on_aggro_zone_body_entered"]
[connection signal="body_exited" from="body/aggro_zone" to="body" method="_on_aggro_zone_body_exited"]
[connection signal="timeout" from="body/FireTimer" to="body" method="_on_AttackTimer_timeout"]
